# wulpus

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
sw/: .gitignore  CHANGELOG.md  LICENSE  MATLAB_load_wulpus_log.m  README.md  bmode_configs.json  convert_measurements.ipynb  data_0.npz  data_1.npz  data_2.npz  data_3.npz  data_4.npz  how_to_install_dependencies.md  pyproject.toml  requirements.yml  tx_rx_configs.json  tx_rx_configs_bmode.json  uss_config.json  uss_config_hand_tests.json  visualize_log.ipynb  wulpus_gui.ipynb
sw/examples/: data_0.npz
sw/examples/carotid/: data_10.npz  data_11.npz  data_12.npz  data_8.npz  tx_rx_configs_carotid.json  uss_config_carotid.json  uss_config_carotid_five.json
sw/examples/waterbath/: data_31.npz  tx_rx_configs_waterbath.json  uss_config_waterbath.json
sw/jupyter notebook (legacy)/: LICENSE  wulpus_gui.ipynb
sw/jupyter notebook (legacy)/examples/: tx_rx_configs.json  uss_config.json
sw/jupyter notebook (legacy)/wulpus_jptnbk/: gui.py  rx_tx_conf.py  rx_tx_conf_gui.py  (+3 more)
sw/wulpus/: config_package.py  data_processing.py  dongle.py  gui.py  helper.py  interface.py  interface_direct.py  interface_mock.py  interface_usb.py  main.py  main.spec  plot_helpers.py  requirements.txt  rx_tx_conf.py  rx_tx_conf_gui.py  series.py  uss_conf.py  uss_conf_gui.py  websocket_manager.py  wulpus.py  wulpus_api.py  wulpus_api_helper.py  wulpus_config_models.py  wulpus_http_models.py  wulpus_mock.py  wulpus_model.py
sw/wulpus-frontend/: README.md  build.py  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+304 files in other folders)
