[project]
name = "wulpus"
version = "0.1.0"
description = "FastAPI backend for the WULPUS GUI"
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy~=1.23",
    "scipy~=1.9",
    "pyserial~=3.5",
    "pydantic~=2.11",
    "ipympl~=0.9.3",
    "matplotlib~=3.5",
    "websockets~=15.0",
    "pyinstaller~=6.15",
    "fastapi[standard]~=0.116",
    "pandas~=2.3",
    "tables~=3.9",
    "pyarrow~=21.0",
    "bleak~=1.1",
    "PyWavelets~=1.6.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter~=1.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wulpus"]
